--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -37,7 +37,8 @@ outputs:
         - packaging ==23.2
         - pathspec ==0.12.1
         - pluggy ==1.3.0
-        - smmap ==5.0.1
+        # smmap 5.0.1 was not built on conda-forge
+        - smmap ==6.0.0
         - tomli ==2.0.1  # [py<311]
         - trove-classifiers ==2023.11.29
         - pip
