--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -66,7 +66,9 @@ outputs:
         - flask-appbuilder ==4.3.10
         - flask-caching >=1.5.0
         - flask-login >=0.6.2
-        - flask-session >=0.4.0
+        # Extra constraint needed:
+        # https://github.com/apache/airflow/pull/36895
+        - flask-session >=0.4.0,<0.6
         - flask-wtf >=0.15
         - flask >=2.2,<2.3
         - fsspec >=2023.10.0
