--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,19 +1,18 @@
 {% set name = "airflow" %}
+{% set pypi_name = "apache-airflow" %}
 {% set version = "2.8.1" %}
-{% set sha256 = "4d0a1e4373854fb442663c8cf4db84db6f11836fe76bbaf0f3e6b06a8adc3ef1" %}
 
 package:
   name: {{ name|lower }}-split
   version: {{ version }}
 
 source:
-  fn: {{ name }}-{{ version }}.tar.gz
-  url: https://github.com/apache/{{ name }}/archive/{{ version }}.tar.gz
-  sha256: {{ sha256 }}
+  url: https://pypi.io/packages/source/{{ pypi_name[0] }}/{{ pypi_name }}/apache_airflow-{{ version }}.tar.gz
+  sha256: 7443d82b790886c5ec137a8fdb94d672e33e81336713ca7320b4a1bbad443a9c
 
 build:
   skip: true  # [win or py>=312]
-  number: 0
+  number: 1
 
 outputs:
   - name: {{ name }}
@@ -527,7 +526,6 @@ about:
   license: Apache-2.0
   license_file:
     - LICENSE
-    - NOTICE
     - 3rd-party-licenses/LICENSE-bootstrap3-typeahead.txt
     - 3rd-party-licenses/LICENSE-bootstrap.txt
     - 3rd-party-licenses/LICENSE-d3js.txt
