--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -14,6 +14,15 @@ build:
   skip: true  # [win or py>=312]
   number: 0
 
+requirements:
+  build:
+    - python                                 # [build_platform != target_platform]
+    - cross-python_{{ target_platform }}     # [build_platform != target_platform]
+  host:
+    - python
+    - pip
+
+
 outputs:
   - name: {{ name }}
     script: install_airflow.sh
