--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,6 +1,6 @@
 {% set name = "airflow" %}
 {% set pypi_name = "apache-airflow" %}
-{% set version = "2.8.3" %}
+{% set version = "2.8.4" %}
 
 package:
   name: {{ name|lower }}-split
@@ -8,7 +8,7 @@ package:
 
 source:
   url: https://pypi.io/packages/source/{{ pypi_name[0] }}/{{ pypi_name }}/apache_airflow-{{ version }}.tar.gz
-  sha256: 16a7b6a22242867407020941a74744eb24b957a12ae7b4fd301ac5091b21326d
+  sha256: 899dac9916ad2d973a0dd1b6c5c8d365d04bd2b8839f504d0f287e657365b77e
 
 build:
   skip: true  # [win or py>=312]
@@ -35,11 +35,10 @@ outputs:
         - cross-python_{{ target_platform }}     # [build_platform != target_platform]
       host:
         - python
-        - editables ==0.5
         - gitdb ==4.0.11
         - gitpython ==3.1.42
-        - hatchling ==1.21.1
-        - packaging ==23.2
+        - hatchling ==1.22.3
+        - packaging ==24.0
         - pathspec ==0.12.1
         - pluggy ==1.4.0
         # smmap 5.0.1 was not built on conda-forge
@@ -63,7 +62,7 @@ outputs:
         - itsdangerous >=0.24
 
         - cron-descriptor >=1.2.24
-        - croniter >=0.3.17
+        - croniter >=2.0.2
         - cryptography >=0.9.3
         - deprecated >=1.2.13
         - dill >=0.2.2
@@ -80,7 +79,7 @@ outputs:
         - gunicorn >=20.1.0
         - httpx
         - importlib-metadata >=1.7  # [py<39]
-        - importlib-resources >=5.2  # [py<39]
+        - importlib-resources >=5.2,!=6.2.0,!=6.3.0,!=6.3.1  # [py<39]
         - itsdangerous >=2.0
         - jinja2 >=3.0.0
         - jsonschema >=4.18.0
@@ -229,7 +228,7 @@ outputs:
         - requests-kerberos >=0.7.0
         # dataframe extra
         - fastavro >=0.21.19
-        - pandas>=0.14.1
+        - pandas >=0.14.1
     test:
       imports:
         - airflow
@@ -383,7 +382,7 @@ outputs:
       run:
         - python
         - {{ pin_subpackage(name, max_pin='x.x.x.x.x.x') }}
-        - pandas >=1.2.5
+        - pandas >=1.2.5,<2.2
     test:
       imports:
         - airflow
