--- a/conda-forge.yml
+++ b/conda-forge.yml
@@ -1,5 +1,5 @@
 bot:
-  inspection: grayskull-update
+  inspection: update-grayskull
 build_platform:
   linux_aarch64: linux_64
   linux_ppc64le: linux_64
