--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -12,7 +12,7 @@ source:
 
 build:
   skip: true  # [win or py>=313]
-  number: 0
+  number: 1
 
 requirements:
   build:
@@ -196,11 +196,15 @@ outputs:
         - pip
 
   - name: {{ name }}-with-apache-atlas
+    build:
+      noarch: python
+      # noarch so just build it once
+      skip: true  # [not linux64 or py!=312]
     requirements:
       host:
-        - python
+        - python >=3.8,<3.13
       run:
-        - python
+        - python >=3.8,<3.13
         - {{ pin_subpackage(name, max_pin='x.x.x.x.x.x') }}
         - atlasclient >=0.1.2
     test:
@@ -213,11 +217,15 @@ outputs:
         - pip
 
   - name: {{ name }}-with-apache-webhdfs
+    build:
+      noarch: python
+      # noarch so just build it once
+      skip: true  # [not linux64 or py!=312]
     requirements:
       host:
-        - python
+        - python >=3.8,<3.13
       run:
-        - python
+        - python >=3.8,<3.13
         - {{ pin_subpackage(name, max_pin='x.x.x.x.x.x') }}
         - python-hdfs >=2.0.4
         # avro extra
@@ -238,11 +246,15 @@ outputs:
         - pip
 
   - name: {{ name }}-with-aiobotocore
+    build:
+      noarch: python
+      # noarch so just build it once
+      skip: true  # [not linux64 or py!=312]
     requirements:
       host:
-        - python
+        - python >=3.8,<3.13
       run:
-        - python
+        - python >=3.8,<3.13
         - {{ pin_subpackage(name, max_pin='x.x.x.x.x.x') }}
         - aiobotocore >=2.7.0
     test:
@@ -254,11 +266,15 @@ outputs:
         - pip
 
   - name: {{ name }}-with-async
+    build:
+      noarch: python
+      # noarch so just build it once
+      skip: true  # [not linux64 or py!=312]
     requirements:
       host:
-        - python
+        - python >=3.8,<3.13
       run:
-        - python
+        - python >=3.8,<3.13
         - {{ pin_subpackage(name, max_pin='x.x.x.x.x.x') }}
         - eventlet >=0.33.3
         - gevent >=0.13
@@ -275,11 +291,15 @@ outputs:
         - pip
 
   - name: {{ name }}-with-github_enterprise
+    build:
+      noarch: python
+      # noarch so just build it once
+      skip: true  # [not linux64 or py!=312]
     requirements:
       host:
-        - python
+        - python >=3.8,<3.13
       run:
-        - python
+        - python >=3.8,<3.13
         - {{ pin_subpackage(name, max_pin='x.x.x.x.x.x') }}
         - apache-airflow-providers-fab
         - authlib >=1.0.0
@@ -293,11 +313,15 @@ outputs:
         - pip
 
   - name: {{ name }}-with-google_auth
+    build:
+      noarch: python
+      # noarch so just build it once
+      skip: true  # [not linux64 or py!=312]
     requirements:
       host:
-        - python
+        - python >=3.8,<3.13
       run:
-        - python
+        - python >=3.8,<3.13
         - {{ pin_subpackage(name, max_pin='x.x.x.x.x.x') }}
         - apache-airflow-providers-fab
         - authlib >=1.0.0
@@ -311,11 +335,15 @@ outputs:
         - pip
 
   - name: {{ name }}-with-kerberos
+    build:
+      noarch: python
+      # noarch so just build it once
+      skip: true  # [not linux64 or py!=312]
     requirements:
       host:
-        - python
+        - python >=3.8,<3.13
       run:
-        - python
+        - python >=3.8,<3.13
         - {{ pin_subpackage(name, max_pin='x.x.x.x.x.x') }}
         - pykerberos >=1.1.13
         - requests-kerberos >=0.10.0
@@ -334,12 +362,14 @@ outputs:
 
   - name: {{ name }}-with-ldap
     build:
-      skip: True  # [arm64 or aarch64 or ppc64le]
+      noarch: python
+      # noarch so just build it once
+      skip: true  # [not linux64 or py!=312]
     requirements:
       host:
-        - python
+        - python >=3.8,<3.13
       run:
-        - python
+        - python >=3.8,<3.13
         - {{ pin_subpackage(name, max_pin='x.x.x.x.x.x') }}
         - ldap3 >=2.5.1
         - python-ldap
@@ -354,12 +384,14 @@ outputs:
 
   - name: {{ name }}-with-leveldb
     build:
-      skip: True  # [arm64 or aarch64 or ppc64le]
+      noarch: python
+      # noarch so just build it once
+      skip: true  # [not linux64 or py!=312]
     requirements:
       host:
-        - python
+        - python >=3.8,<3.13
       run:
-        - python
+        - python >=3.8,<3.13
         - {{ pin_subpackage(name, max_pin='x.x.x.x.x.x') }}
         - plyvel
     test:
@@ -372,11 +404,15 @@ outputs:
         - pip
 
   - name: {{ name }}-with-pandas
+    build:
+      noarch: python
+      # noarch so just build it once
+      skip: true  # [not linux64 or py!=312]
     requirements:
       host:
-        - python
+        - python >=3.8,<3.13
       run:
-        - python
+        - python >=3.8,<3.13
         - {{ pin_subpackage(name, max_pin='x.x.x.x.x.x') }}
         - pandas >=1.2.5,<2.2
     test:
@@ -389,11 +425,15 @@ outputs:
         - pip
 
   - name: {{ name }}-with-password
+    build:
+      noarch: python
+      # noarch so just build it once
+      skip: true  # [not linux64 or py!=312]
     requirements:
       host:
-        - python
+        - python >=3.8,<3.13
       run:
-        - python
+        - python >=3.8,<3.13
         - {{ pin_subpackage(name, max_pin='x.x.x.x.x.x') }}
         - bcrypt >=2.0.0
         - flask-bcrypt >=0.7.1
@@ -407,11 +447,15 @@ outputs:
         - pip
 
   - name: {{ name }}-with-pydantic
+    build:
+      noarch: python
+      # noarch so just build it once
+      skip: true  # [not linux64 or py!=312]
     requirements:
       host:
-        - python
+        - python >=3.8,<3.13
       run:
-        - python
+        - python >=3.8,<3.13
         - {{ pin_subpackage(name, max_pin='x.x.x.x.x.x') }}
         - pydantic>=2.3.0
     test:
@@ -424,11 +468,15 @@ outputs:
         - pip
 
   - name: {{ name }}-with-rabbitmq
+    build:
+      noarch: python
+      # noarch so just build it once
+      skip: true  # [not linux64 or py!=312]
     requirements:
       host:
-        - python
+        - python >=3.8,<3.13
       run:
-        - python
+        - python >=3.8,<3.13
         - {{ pin_subpackage(name, max_pin='x.x.x.x.x.x') }}
         - amqp
     test:
@@ -441,11 +489,15 @@ outputs:
         - pip
 
   - name: {{ name }}-with-s3fs
+    build:
+      noarch: python
+      # noarch so just build it once
+      skip: true  # [not linux64 or py!=312]
     requirements:
       host:
-        - python
+        - python >=3.8,<3.13
       run:
-        - python
+        - python >=3.8,<3.13
         - {{ pin_subpackage(name, max_pin='x.x.x.x.x.x') }}
         - s3fs >=2023.10.0
     test:
@@ -457,11 +509,15 @@ outputs:
         - pip
 
   - name: {{ name }}-with-saml
+    build:
+      noarch: python
+      # noarch so just build it once
+      skip: true  # [not linux64 or py!=312]
     requirements:
       host:
-        - python
+        - python >=3.8,<3.13
       run:
-        - python
+        - python >=3.8,<3.13
         - {{ pin_subpackage(name, max_pin='x.x.x.x.x.x') }}
         - python3-saml >=1.16.0
     test:
@@ -473,11 +529,15 @@ outputs:
         - pip
 
   - name: {{ name }}-with-sentry
+    build:
+      noarch: python
+      # noarch so just build it once
+      skip: true  # [not linux64 or py!=312]
     requirements:
       host:
-        - python
+        - python >=3.8,<3.13
       run:
-        - python
+        - python >=3.8,<3.13
         - {{ pin_subpackage(name, max_pin='x.x.x.x.x.x') }}
         - blinker >=1.1
         - sentry-sdk >=1.32.0,!=1.33.0
@@ -492,11 +552,15 @@ outputs:
         - pip
 
   - name: {{ name }}-with-statsd
+    build:
+      noarch: python
+      # noarch so just build it once
+      skip: true  # [not linux64 or py!=312]
     requirements:
       host:
-        - python
+        - python >=3.8,<3.13
       run:
-        - python
+        - python >=3.8,<3.13
         - {{ pin_subpackage(name, max_pin='x.x.x.x.x.x') }}
         - statsd >=3.3.0
     test:
@@ -509,11 +573,15 @@ outputs:
         - pip
 
   - name: {{ name }}-with-uv
+    build:
+      noarch: python
+      # noarch so just build it once
+      skip: true  # [not linux64 or py!=312]
     requirements:
       host:
-        - python
+        - python >=3.8,<3.13
       run:
-        - python
+        - python >=3.8,<3.13
         - {{ pin_subpackage(name, max_pin='x.x.x.x.x.x') }}
         - uv >=0.1.32
     test:
@@ -526,11 +594,15 @@ outputs:
 
 
   - name: {{ name }}-with-virtualenv
+    build:
+      noarch: python
+      # noarch so just build it once
+      skip: true  # [not linux64 or py!=312]
     requirements:
       host:
-        - python
+        - python >=3.8,<3.13
       run:
-        - python
+        - python >=3.8,<3.13
         - {{ pin_subpackage(name, max_pin='x.x.x.x.x.x') }}
         - virtualenv
     test:
