--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,6 +1,10 @@
 {% set name = "airflow" %}
 {% set pypi_name = "apache-airflow" %}
 {% set version = "2.10.4" %}
+# use the conda-forge min because anything lower isn't being built
+{% set python_min = "3.9" %}
+# python must be less than this version (also update in skip below)
+{% set python_over = "3.13" %}
 
 package:
   name: {{ name|lower }}-split
@@ -189,24 +193,25 @@ outputs:
     requirements:
       run:
         - python
-        - {{ pin_subpackage(name, max_pin='x.x.x.x.x.x') }}
+        - {{ pin_subpackage(name, exact=True) }}
     test:
       imports:
         - airflow
       commands:
         - pip check
       requires:
+        - python {{ python_min }}
         - pip
 
   - name: {{ name }}-with-apache-atlas
     build:
       noarch: python
       # noarch so just build it once
-      skip: true  # [not linux64 or py!=312]
+      skip: true  # [not linux64 or py!=39]
     requirements:
       run:
-        - python >=3.8,<3.13
-        - {{ pin_subpackage(name, max_pin='x.x.x.x.x.x') }}
+        - python >={{ python_min }},<{{ python_over }}
+        - {{ pin_subpackage(name, exact=True) }}
         - atlasclient >=0.1.2
     test:
       imports:
@@ -215,17 +220,18 @@ outputs:
       commands:
         - pip check
       requires:
+        - python {{ python_min }}
         - pip
 
   - name: {{ name }}-with-apache-webhdfs
     build:
       noarch: python
       # noarch so just build it once
-      skip: true  # [not linux64 or py!=312]
+      skip: true  # [not linux64 or py!=39]
     requirements:
       run:
-        - python >=3.8,<3.13
-        - {{ pin_subpackage(name, max_pin='x.x.x.x.x.x') }}
+        - python >={{ python_min }},<{{ python_over }}
+        - {{ pin_subpackage(name, exact=True) }}
         - python-hdfs >=2.0.4
         # avro extra
         - fastavro >=0.21.19
@@ -242,17 +248,18 @@ outputs:
       commands:
         - pip check
       requires:
+        - python {{ python_min }}
         - pip
 
   - name: {{ name }}-with-aiobotocore
     build:
       noarch: python
       # noarch so just build it once
-      skip: true  # [not linux64 or py!=312]
+      skip: true  # [not linux64 or py!=39]
     requirements:
       run:
-        - python >=3.8,<3.13
-        - {{ pin_subpackage(name, max_pin='x.x.x.x.x.x') }}
+        - python >={{ python_min }},<{{ python_over }}
+        - {{ pin_subpackage(name, exact=True) }}
         - aiobotocore >=2.9.0
     test:
       imports:
@@ -260,17 +267,18 @@ outputs:
       commands:
         - pip check
       requires:
+        - python {{ python_min }}
         - pip
 
   - name: {{ name }}-with-async
     build:
       noarch: python
       # noarch so just build it once
-      skip: true  # [not linux64 or py!=312]
+      skip: true  # [not linux64 or py!=39]
     requirements:
       run:
-        - python >=3.8,<3.13
-        - {{ pin_subpackage(name, max_pin='x.x.x.x.x.x') }}
+        - python >={{ python_min }},<{{ python_over }}
+        - {{ pin_subpackage(name, exact=True) }}
         - eventlet >=0.33.3
         - gevent >=0.13
         - greenlet >=0.4.9
@@ -283,17 +291,18 @@ outputs:
       commands:
         - pip check
       requires:
+        - python {{ python_min }}
         - pip
 
   - name: {{ name }}-with-github_enterprise
     build:
       noarch: python
       # noarch so just build it once
-      skip: true  # [not linux64 or py!=312]
+      skip: true  # [not linux64 or py!=39]
     requirements:
       run:
-        - python >=3.8,<3.13
-        - {{ pin_subpackage(name, max_pin='x.x.x.x.x.x') }}
+        - python >={{ python_min }},<{{ python_over }}
+        - {{ pin_subpackage(name, exact=True) }}
         - apache-airflow-providers-fab
         - authlib >=1.0.0
     test:
@@ -303,17 +312,18 @@ outputs:
       commands:
         - pip check
       requires:
+        - python {{ python_min }}
         - pip
 
   - name: {{ name }}-with-google_auth
     build:
       noarch: python
       # noarch so just build it once
-      skip: true  # [not linux64 or py!=312]
+      skip: true  # [not linux64 or py!=39]
     requirements:
       run:
-        - python >=3.8,<3.13
-        - {{ pin_subpackage(name, max_pin='x.x.x.x.x.x') }}
+        - python >={{ python_min }},<{{ python_over }}
+        - {{ pin_subpackage(name, exact=True) }}
         - apache-airflow-providers-fab
         - authlib >=1.0.0
     test:
@@ -323,17 +333,18 @@ outputs:
       commands:
         - pip check
       requires:
+        - python {{ python_min }}
         - pip
 
   - name: {{ name }}-with-kerberos
     build:
       noarch: python
       # noarch so just build it once
-      skip: true  # [not linux64 or py!=312]
+      skip: true  # [not linux64 or py!=39]
     requirements:
       run:
-        - python >=3.8,<3.13
-        - {{ pin_subpackage(name, max_pin='x.x.x.x.x.x') }}
+        - python >={{ python_min }},<{{ python_over }}
+        - {{ pin_subpackage(name, exact=True) }}
         - pykerberos >=1.1.13
         - requests-kerberos >=0.10.0
         - thrift_sasl >=0.2.0
@@ -347,17 +358,18 @@ outputs:
       commands:
         - pip check
       requires:
+        - python {{ python_min }}
         - pip
 
   - name: {{ name }}-with-ldap
     build:
       noarch: python
       # noarch so just build it once
-      skip: true  # [not linux64 or py!=312]
+      skip: true  # [not linux64 or py!=39]
     requirements:
       run:
-        - python >=3.8,<3.13
-        - {{ pin_subpackage(name, max_pin='x.x.x.x.x.x') }}
+        - python >={{ python_min }},<{{ python_over }}
+        - {{ pin_subpackage(name, exact=True) }}
         - ldap3 >=2.5.1
         - python-ldap
     test:
@@ -367,17 +379,18 @@ outputs:
       commands:
         - pip check
       requires:
+        - python {{ python_min }}
         - pip
 
   - name: {{ name }}-with-leveldb
     build:
       noarch: python
       # noarch so just build it once per os
-      skip: true  # [py!=312]
+      skip: true  # [py!=39]
     requirements:
       run:
-        - python >=3.8,<3.13
-        - {{ pin_subpackage(name, max_pin='x.x.x.x.x.x') }}
+        - python >={{ python_min }},<{{ python_over }}
+        - {{ pin_subpackage(name, exact=True) }}
         - plyvel >=1.5.1  # [not osx]
         - __linux  # [linux]
         - __osx    # [osx]
@@ -389,17 +402,18 @@ outputs:
       commands:
         - pip check
       requires:
+        - python {{ python_min }}
         - pip
 
   - name: {{ name }}-with-pandas
     build:
       noarch: python
       # noarch so just build it once
-      skip: true  # [not linux64 or py!=312]
+      skip: true  # [not linux64 or py!=39]
     requirements:
       run:
-        - python >=3.8,<3.13
-        - {{ pin_subpackage(name, max_pin='x.x.x.x.x.x') }}
+        - python >={{ python_min }},<{{ python_over }}
+        - {{ pin_subpackage(name, exact=True) }}
         - pandas >=1.2.5,<2.2
     test:
       imports:
@@ -408,17 +422,18 @@ outputs:
       commands:
         - pip check
       requires:
+        - python {{ python_min }}
         - pip
 
   - name: {{ name }}-with-password
     build:
       noarch: python
       # noarch so just build it once
-      skip: true  # [not linux64 or py!=312]
+      skip: true  # [not linux64 or py!=39]
     requirements:
       run:
-        - python >=3.8,<3.13
-        - {{ pin_subpackage(name, max_pin='x.x.x.x.x.x') }}
+        - python >={{ python_min }},<{{ python_over }}
+        - {{ pin_subpackage(name, exact=True) }}
         - bcrypt >=2.0.0
         - flask-bcrypt >=0.7.1
     test:
@@ -428,17 +443,18 @@ outputs:
       commands:
         - pip check
       requires:
+        - python {{ python_min }}
         - pip
 
   - name: {{ name }}-with-pydantic
     build:
       noarch: python
       # noarch so just build it once
-      skip: true  # [not linux64 or py!=312]
+      skip: true  # [not linux64 or py!=39]
     requirements:
       run:
-        - python >=3.8,<3.13
-        - {{ pin_subpackage(name, max_pin='x.x.x.x.x.x') }}
+        - python >={{ python_min }},<{{ python_over }}
+        - {{ pin_subpackage(name, exact=True) }}
         - pydantic>=2.3.0
     test:
       imports:
@@ -447,17 +463,18 @@ outputs:
       commands:
         - pip check
       requires:
+        - python {{ python_min }}
         - pip
 
   - name: {{ name }}-with-rabbitmq
     build:
       noarch: python
       # noarch so just build it once
-      skip: true  # [not linux64 or py!=312]
+      skip: true  # [not linux64 or py!=39]
     requirements:
       run:
-        - python >=3.8,<3.13
-        - {{ pin_subpackage(name, max_pin='x.x.x.x.x.x') }}
+        - python >={{ python_min }},<{{ python_over }}
+        - {{ pin_subpackage(name, exact=True) }}
         - amqp
     test:
       imports:
@@ -466,17 +483,18 @@ outputs:
       commands:
         - pip check
       requires:
+        - python {{ python_min }}
         - pip
 
   - name: {{ name }}-with-s3fs
     build:
       noarch: python
       # noarch so just build it once
-      skip: true  # [not linux64 or py!=312]
+      skip: true  # [not linux64 or py!=39]
     requirements:
       run:
-        - python >=3.8,<3.13
-        - {{ pin_subpackage(name, max_pin='x.x.x.x.x.x') }}
+        - python >={{ python_min }},<{{ python_over }}
+        - {{ pin_subpackage(name, exact=True) }}
         - s3fs >=2023.10.0
     test:
       imports:
@@ -484,17 +502,18 @@ outputs:
       commands:
         - pip check
       requires:
+        - python {{ python_min }}
         - pip
 
   - name: {{ name }}-with-saml
     build:
       noarch: python
       # noarch so just build it once
-      skip: true  # [not linux64 or py!=312]
+      skip: true  # [not linux64 or py!=39]
     requirements:
       run:
-        - python >=3.8,<3.13
-        - {{ pin_subpackage(name, max_pin='x.x.x.x.x.x') }}
+        - python >={{ python_min }},<{{ python_over }}
+        - {{ pin_subpackage(name, exact=True) }}
         - python3-saml >=1.16.0
     test:
       imports:
@@ -502,17 +521,18 @@ outputs:
       commands:
         - pip check
       requires:
+        - python {{ python_min }}
         - pip
 
   - name: {{ name }}-with-sentry
     build:
       noarch: python
       # noarch so just build it once
-      skip: true  # [not linux64 or py!=312]
+      skip: true  # [not linux64 or py!=39]
     requirements:
       run:
-        - python >=3.8,<3.13
-        - {{ pin_subpackage(name, max_pin='x.x.x.x.x.x') }}
+        - python >={{ python_min }},<{{ python_over }}
+        - {{ pin_subpackage(name, exact=True) }}
         - blinker >=1.1
         - sentry-sdk >=1.32.0,!=1.33.0
     test:
@@ -523,17 +543,18 @@ outputs:
       commands:
         - pip check
       requires:
+        - python {{ python_min }}
         - pip
 
   - name: {{ name }}-with-statsd
     build:
       noarch: python
       # noarch so just build it once
-      skip: true  # [not linux64 or py!=312]
+      skip: true  # [not linux64 or py!=39]
     requirements:
       run:
-        - python >=3.8,<3.13
-        - {{ pin_subpackage(name, max_pin='x.x.x.x.x.x') }}
+        - python >={{ python_min }},<{{ python_over }}
+        - {{ pin_subpackage(name, exact=True) }}
         - statsd >=3.3.0
     test:
       imports:
@@ -542,17 +563,18 @@ outputs:
       commands:
         - pip check
       requires:
+        - python {{ python_min }}
         - pip
 
   - name: {{ name }}-with-uv
     build:
       noarch: python
       # noarch so just build it once
-      skip: true  # [not linux64 or py!=312]
+      skip: true  # [not linux64 or py!=39]
     requirements:
       run:
-        - python >=3.8,<3.13
-        - {{ pin_subpackage(name, max_pin='x.x.x.x.x.x') }}
+        - python >={{ python_min }},<{{ python_over }}
+        - {{ pin_subpackage(name, exact=True) }}
         - uv >=0.1.32
     test:
       imports:
@@ -560,6 +582,7 @@ outputs:
       commands:
         - pip check
       requires:
+        - python {{ python_min }}
         - pip
 
 
@@ -567,11 +590,11 @@ outputs:
     build:
       noarch: python
       # noarch so just build it once
-      skip: true  # [not linux64 or py!=312]
+      skip: true  # [not linux64 or py!=39]
     requirements:
       run:
-        - python >=3.8,<3.13
-        - {{ pin_subpackage(name, max_pin='x.x.x.x.x.x') }}
+        - python >={{ python_min }},<{{ python_over }}
+        - {{ pin_subpackage(name, exact=True) }}
         - virtualenv
     test:
       imports:
@@ -580,6 +603,7 @@ outputs:
       commands:
         - pip check
       requires:
+        - python {{ python_min }}
         - pip
 
 about:
