Revert "Make apache-airflow metapackage noarch"
This reverts commit 3d3dbb88e5b6333c520e7b6d28324c3cd1513662.

--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -190,13 +190,9 @@ outputs:
 
   # alternative name for the core package
   - name: apache-airflow
-    build:
-      noarch: python
-      # noarch so just build it once
-      skip: true  # [not linux64 or py!=39]
     requirements:
       run:
-        - python >={{ python_min }},<{{ python_over }}
+        - python
         - {{ pin_subpackage(name, exact=True) }}
     test:
       imports:
