--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -16,7 +16,7 @@ source:
 
 build:
   skip: true  # [win or py>=313]
-  number: 1
+  number: 2
 
 requirements:
   build:
@@ -196,7 +196,7 @@ outputs:
         - python
       run:
         - python
-        - {{ pin_subpackage(name, exact=True) }}
+        - {{ pin_subpackage(name, max_pin='x.x.x.x.x.x') }}
     test:
       imports:
         - airflow
@@ -213,7 +213,7 @@ outputs:
     requirements:
       run:
         - python >={{ python_min }},<{{ python_over }}
-        - {{ pin_subpackage(name, exact=True) }}
+        - {{ pin_subpackage(name, max_pin='x.x.x.x.x.x') }}
         - atlasclient >=0.1.2
     test:
       imports:
@@ -233,7 +233,7 @@ outputs:
     requirements:
       run:
         - python >={{ python_min }},<{{ python_over }}
-        - {{ pin_subpackage(name, exact=True) }}
+        - {{ pin_subpackage(name, max_pin='x.x.x.x.x.x') }}
         - python-hdfs >=2.0.4
         # avro extra
         - fastavro >=0.21.19
@@ -261,7 +261,7 @@ outputs:
     requirements:
       run:
         - python >={{ python_min }},<{{ python_over }}
-        - {{ pin_subpackage(name, exact=True) }}
+        - {{ pin_subpackage(name, max_pin='x.x.x.x.x.x') }}
         - aiobotocore >=2.9.0
     test:
       imports:
@@ -280,7 +280,7 @@ outputs:
     requirements:
       run:
         - python >={{ python_min }},<{{ python_over }}
-        - {{ pin_subpackage(name, exact=True) }}
+        - {{ pin_subpackage(name, max_pin='x.x.x.x.x.x') }}
         - eventlet >=0.33.3
         - gevent >=0.13
         - greenlet >=0.4.9
@@ -304,7 +304,7 @@ outputs:
     requirements:
       run:
         - python >={{ python_min }},<{{ python_over }}
-        - {{ pin_subpackage(name, exact=True) }}
+        - {{ pin_subpackage(name, max_pin='x.x.x.x.x.x') }}
         - apache-airflow-providers-fab
         - authlib >=1.0.0
     test:
@@ -325,7 +325,7 @@ outputs:
     requirements:
       run:
         - python >={{ python_min }},<{{ python_over }}
-        - {{ pin_subpackage(name, exact=True) }}
+        - {{ pin_subpackage(name, max_pin='x.x.x.x.x.x') }}
         - apache-airflow-providers-fab
         - authlib >=1.0.0
     test:
@@ -346,7 +346,7 @@ outputs:
     requirements:
       run:
         - python >={{ python_min }},<{{ python_over }}
-        - {{ pin_subpackage(name, exact=True) }}
+        - {{ pin_subpackage(name, max_pin='x.x.x.x.x.x') }}
         - pykerberos >=1.1.13
         - requests-kerberos >=0.10.0
         - thrift_sasl >=0.2.0
@@ -371,7 +371,7 @@ outputs:
     requirements:
       run:
         - python >={{ python_min }},<{{ python_over }}
-        - {{ pin_subpackage(name, exact=True) }}
+        - {{ pin_subpackage(name, max_pin='x.x.x.x.x.x') }}
         - ldap3 >=2.5.1
         - python-ldap
     test:
@@ -393,7 +393,7 @@ outputs:
     requirements:
       run:
         - python >={{ python_min }},<{{ python_over }}
-        - {{ pin_subpackage(name, exact=True) }}
+        - {{ pin_subpackage(name, max_pin='x.x.x.x.x.x') }}
         - plyvel >=1.5.1
         - __linux  # [linux]
         - __osx    # [osx]
@@ -416,7 +416,7 @@ outputs:
     requirements:
       run:
         - python >={{ python_min }},<{{ python_over }}
-        - {{ pin_subpackage(name, exact=True) }}
+        - {{ pin_subpackage(name, max_pin='x.x.x.x.x.x') }}
         - pandas >=1.2.5,<2.2
     test:
       imports:
@@ -436,7 +436,7 @@ outputs:
     requirements:
       run:
         - python >={{ python_min }},<{{ python_over }}
-        - {{ pin_subpackage(name, exact=True) }}
+        - {{ pin_subpackage(name, max_pin='x.x.x.x.x.x') }}
         - bcrypt >=2.0.0
         - flask-bcrypt >=0.7.1
     test:
@@ -457,7 +457,7 @@ outputs:
     requirements:
       run:
         - python >={{ python_min }},<{{ python_over }}
-        - {{ pin_subpackage(name, exact=True) }}
+        - {{ pin_subpackage(name, max_pin='x.x.x.x.x.x') }}
         - pydantic>=2.3.0
     test:
       imports:
@@ -477,7 +477,7 @@ outputs:
     requirements:
       run:
         - python >={{ python_min }},<{{ python_over }}
-        - {{ pin_subpackage(name, exact=True) }}
+        - {{ pin_subpackage(name, max_pin='x.x.x.x.x.x') }}
         - amqp
     test:
       imports:
@@ -497,7 +497,7 @@ outputs:
     requirements:
       run:
         - python >={{ python_min }},<{{ python_over }}
-        - {{ pin_subpackage(name, exact=True) }}
+        - {{ pin_subpackage(name, max_pin='x.x.x.x.x.x') }}
         - s3fs >=2023.10.0
     test:
       imports:
@@ -516,7 +516,7 @@ outputs:
     requirements:
       run:
         - python >={{ python_min }},<{{ python_over }}
-        - {{ pin_subpackage(name, exact=True) }}
+        - {{ pin_subpackage(name, max_pin='x.x.x.x.x.x') }}
         - python3-saml >=1.16.0
     test:
       imports:
@@ -535,7 +535,7 @@ outputs:
     requirements:
       run:
         - python >={{ python_min }},<{{ python_over }}
-        - {{ pin_subpackage(name, exact=True) }}
+        - {{ pin_subpackage(name, max_pin='x.x.x.x.x.x') }}
         - blinker >=1.1
         - sentry-sdk >=1.32.0,!=1.33.0
     test:
@@ -557,7 +557,7 @@ outputs:
     requirements:
       run:
         - python >={{ python_min }},<{{ python_over }}
-        - {{ pin_subpackage(name, exact=True) }}
+        - {{ pin_subpackage(name, max_pin='x.x.x.x.x.x') }}
         - statsd >=3.3.0
     test:
       imports:
@@ -577,7 +577,7 @@ outputs:
     requirements:
       run:
         - python >={{ python_min }},<{{ python_over }}
-        - {{ pin_subpackage(name, exact=True) }}
+        - {{ pin_subpackage(name, max_pin='x.x.x.x.x.x') }}
         - uv >=0.1.32
     test:
       imports:
@@ -597,7 +597,7 @@ outputs:
     requirements:
       run:
         - python >={{ python_min }},<{{ python_over }}
-        - {{ pin_subpackage(name, exact=True) }}
+        - {{ pin_subpackage(name, max_pin='x.x.x.x.x.x') }}
         - virtualenv
     test:
       imports:
